testsuite/tests/rename/should_fail/Misplaced.stderr

Misplaced.hs:4:1: error:
    Misplaced SPECIALISE instance pragma:
    {-# SPECIALIZE instance Eq (T Int) #-}
